# pagepy

./: README.md  pageparser.py  pyproject.toml
md/: entry1.md  entry3.md
md/md/: entry2.md  notherpost.md
src/: blog.md  index.md  test4.md
src/md/: blog.md  index.md
src/plugins/: example_plugin.py
templates/: base.html  blog.html  index.html
